# forastero-io

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: amba.md  handshake.md  index.md  mapped.md  stream.md
forastero_io/: __init__.py
forastero_io/apb/: __init__.py  common.py  initiator.py  io.py  transaction.py
forastero_io/axi4/: __init__.py  common.py  initiator.py  io.py  monitor.py  sequences.py  target.py  transaction.py
forastero_io/axi4lite/: __init__.py  initiator.py  io.py  memory.py  monitor.py  sequences.py  target.py  transaction.py
forastero_io/axi4stream/: __init__.py  initiator.py  io.py  monitor.py  sequences.py  target.py  transaction.py
forastero_io/handshake/: __init__.py  io.py  requestor.py  responder.py  sequences.py  transaction.py
forastero_io/mapped/: __init__.py  io.py  request.py  response.py  sequences.py  transaction.py
forastero_io/stream/: __init__.py  initiator.py  io.py  responder.py  sequences.py  transaction.py
