[tool.poetry]
name = "forastero-io"
version = "1.0.0"
description = "Collection of useful I/O components for Forastero testbenches"
authors = ["Peter Birch <peter.birch@vypercore.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "forastero_io"}]

[tool.poetry.dependencies]
python = "^3.11"
forastero = "^1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "N", "W", "I", "A", "C4", "PTH", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
